<resources>
    <string name="app_name">AppTrasteo</string>
    <string name="logo">logoTM</string>
    <string name="inicio">Iniciar Sesión</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="ingreso">Ingresar</string>
    <string name="regsitrar">Registrarse</string>
    <string name="recordar">¿Olvido su contraseña?</string>
    <string name="registrar">Registrar Usuario</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="correo">Correo</string>
    <string name="clave">Contraseña</string>
    <string name="registrarse">Registrar</string>
    <string name="pantalla">Pantalla con fragmentos</string>
    <string name="recuperar">Recuperar Constraseña</string>
    <string name="ingresarCorreo">Ingrese el correo</string>
    <string name="recuperarClave">Recuperar</string>
    <string name="splash">Splash}</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="objects">Objects</string>
    <string name="truck">Truck</string>
    <string name="trip">Trips</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagenConductor">Conductor</string>
    <string name="conductor">Nombre Conductor</string>
    <string name="ciudadConductor">Ciudad Conductor</string>
    <string name="telefonoConductor">Telefono Conductor</string>
    <string name="fotoConductor">Foto</string>
    <string name="nombreObjeto">Nombre Objeto</string>
    <string name="alto">Alto (cms)</string>
    <string name="ancho">Ancho (cms)</string>
    <string name="largo">Largo (cms)</string>
    <string name="peso">Peso (Kg)</string>
    <string name="registrarobjetos">Registrar Objetos</string>
    <string name="unidades">Unidades</string>
</resources>