<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen">

    <Button
        android:id="@+id/registrarObjeto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:background="@drawable/bordes"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/largo"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/redondear_bordes"
        android:drawableEnd="@drawable/ic_baseline_height_24"
        android:ems="10"
        android:hint="@string/largo"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="#616162"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ancho"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/peso"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/redondear_bordes"
        android:drawableEnd="@drawable/ic_baseline_monitor_weight_24"
        android:ems="10"
        android:hint="@string/peso"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="#616162"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ancho"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/peso2"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/redondear_bordes"
        android:drawableEnd="@drawable/ic_baseline_ad_units_24"
        android:ems="10"
        android:hint="@string/unidades"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="#616162"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/largo"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/ancho"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/redondear_bordes"
        android:drawableEnd="@drawable/ic_baseline_height_24"
        android:ems="10"
        android:hint="@string/ancho"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="#616162"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombreObjeto"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/alto"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/redondear_bordes"
        android:drawableEnd="@drawable/ic_baseline_height_24"
        android:ems="10"
        android:hint="@string/alto"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="#616162"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreObjeto"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/nombreObjeto"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/redondear_bordes"
        android:drawableEnd="@drawable/ic_baseline_style_24"
        android:ems="10"
        android:hint="@string/nombreObjeto"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        style="@style/Theme.AppTrasteo"
        android:layout_width="305dp"
        android:layout_height="45dp"
        android:text="@string/registrarobjetos"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peso2">

        <ImageView
            android:id="@+id/imagenFoto"
            android:layout_width="184dp"
            android:layout_height="160dp"
            android:contentDescription="@string/fotoConductor"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/tomarFoto"
            android:layout_width="99dp"
            android:layout_height="57dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/bordes"
            android:text="@string/fotoConductor"
            android:textColor="#4E342E"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>